# OpenGL

./: CMakeLists.txt  OpenGL.sln  OpenGL.vcxproj  OpenGL.vcxproj.filters  README.md
res/shaders/: Basic.shader
src/: Application.cpp
